@@ -160,6 +160,16 @@
   }
 }
 
+\section{\Rlogo CHANGES IN R 4.1.1 patched}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item \code{.mapply(F, dots, .)} no longer segfaults when
+      \code{dots} is not a \code{list} and uses \code{match.fun(F)} as
+      always documented; reported by Andrew Simmons in \PR{18164}.
+    }
+  }
+}
+
 \section{\Rlogo CHANGES IN R 4.1.1}{
   \subsection{NEW FEATURES}{
     \itemize{
